--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-N_T_SERVER_PORT=localhost
+N_T_SERVER_HOST=localhost
 N_T_SERVER_PORT=39620
 
+N_T_CLIENT_NAME=dbg
 N_T_CLIENT_PORT=9999
 
 N_T_AGENT_NAME=dbg
