ports from to moved to .env

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 N_T_SERVER_HOST=localhost
-N_T_SERVER_PORT=39620
+N_T_SERVER_PORT=1337
+N_T_SERVER_PORTS_FROM=3005
+N_T_SERVER_PORTS_TO=3009
 
 N_T_CLIENT_NAME=dbg
 N_T_CLIENT_PORT=9999
