kill server and proxy connections, ability to block local address

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,6 @@ N_T_AGENT_DATA_PORT=8888
 
 N_T_PROXY_HOST=localhost
 N_T_PROXY_PORT=8888
+N_T_PROXY_BLOCK_LOCAL=true
 N_T_PROXY_USER=puser
 N_T_PROXY_PASS=ppass
