--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "dependencies": {
     "dotenv": "^4.0.0",
-    "socks5": "^1.0.0",
+    "socks5": "git+https://github.com/mgrybyk/socks5.git",
     "uuid": "^3.1.0"
   },
   "devDependencies": {},
