--- a/.env-example
+++ b/.env-example
@@ -1,11 +1,17 @@
+# please set crpyt key, do not use default outside local network
+# key should be the same for server, agents and clients
+N_T_CRYPT_KEY=
+
 N_T_SERVER_HOST=localhost
 N_T_SERVER_PORT=1337
 N_T_SERVER_PORTS_FROM=3005
 N_T_SERVER_PORTS_TO=3009
 
+# name up to 128 symbols length
 N_T_CLIENT_NAME=dbg
 N_T_CLIENT_PORT=9999
 
+# name up to 128 symbols length
 N_T_AGENT_NAME=dbg
 N_T_AGENT_DATA_HOST=localhost
 N_T_AGENT_DATA_PORT=8888
