--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "",
   "dependencies": {
     "dotenv": "^4.0.0",
-    "socks5": "git+https://github.com/mgrybyk/socks5.git",
-    "through2": "^2.0.3",
-    "uuid": "^3.1.0"
+    "socks5": "git+https://github.com/mgrybyk/socks5.git"
   },
   "devDependencies": {},
   "scripts": {},
