--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,8 @@
-# please set crpyt key, do not use default outside local network
+# please set crypt key/iv/alg, do not use default outside local network
 # key should be the same for server, agents and clients
-N_T_CRYPT_KEY=
+# N_T_CRYPT_ALG=aes-192-cbc
+# N_T_CRYPT_KEY=b70231120900c150f16291fd
+# N_T_CRYPT_IV=e7c3df588cc0cd5e
 
 N_T_SERVER_HOST=localhost
 N_T_SERVER_PORT=1337
